gitops/apps/hubble-ui-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui-lb
  namespace: kube-system
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.178.94"
spec:
  type: LoadBalancer
  selector:
    k8s-app: hubble-ui
  ports:
    - name: http
      port: 80
      targetPort: 8081
