gitops/apps/nginx-ingress-lb-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.178.91"
spec:
  type: LoadBalancer
