gitops/apps/portainer.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      serviceAccountName: portainer-sa-clusteradmin
      containers:
      - name: portainer
        image: portainer/portainer-ce:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          name: http
        - containerPort: 9443
          name: https
        - containerPort: 8000
          name: tcp-edge
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: portainer-data
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      name: http
    - port: 9443
      targetPort: 9443
      name: https
    - port: 8000
      targetPort: 8000
      name: edge
  selector:
    app: portainer
